# ChangeLog for media-sound/teamspeak-client-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak-client-bin/ChangeLog,v 1.23 2012/05/09 11:49:45 polynomial-c Exp $

*teamspeak-client-bin-3.0.6 (09 May 2012)

  09 May 2012; Lars Wendler <polynomial-c@gentoo.org>
  -teamspeak-client-bin-3.0.0_beta36.ebuild,
  +teamspeak-client-bin-3.0.6.ebuild:
  non-maintainer commit: Version bump. Removed ancient version.

  14 Apr 2012; Pacho Ramos <pacho@gentoo.org>
  teamspeak-client-bin-3.0.0_beta36.ebuild,
  teamspeak-client-bin-3.0.0_rc1.ebuild:
  Fix bug #411003.

  05 Feb 2012; Mike Frysinger <vapier@gentoo.org>
  teamspeak-client-bin-3.0.0_beta36.ebuild,
  teamspeak-client-bin-3.0.0_rc1.ebuild:
  Use unpack_makeself now that it supports newer versions.

  21 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  teamspeak-client-bin-3.0.0_beta36.ebuild,
  teamspeak-client-bin-3.0.0_rc1.ebuild:
  Remove unused =media-libs/libpng-1.4* RDEPEND. The bundled copy of libQtGui
  has NEEDED entry for libpng12.so.0 but this is not required when using the
  system libQtGui.

*teamspeak-client-bin-3.0.0_rc1 (03 Jun 2011)

  03 Jun 2011; Christian Parpart <trapni@gentoo.org>
  -teamspeak-client-bin-3.0.0_beta29.ebuild,
  -teamspeak-client-bin-3.0.0_beta32.ebuild,
  -teamspeak-client-bin-3.0.0_beta32-r1.ebuild,
  -teamspeak-client-bin-3.0.0_beta32-r2.ebuild,
  +teamspeak-client-bin-3.0.0_rc1.ebuild:
  version bump and cleanup

*teamspeak-client-bin-3.0.0_beta36 (27 Feb 2011)

  27 Feb 2011; Christian Parpart <trapni@gentoo.org>
  +teamspeak-client-bin-3.0.0_beta36.ebuild:
  version bump

*teamspeak-client-bin-3.0.0_beta32-r2 (23 Oct 2010)

  23 Oct 2010; Christian Parpart <trapni@gentoo.org>
  +teamspeak-client-bin-3.0.0_beta32-r2.ebuild:
  adds desktop icon. fixes #330293 (thanks to David Mihalcin Jr.
  <dmihalcin@verizon.net>)

*teamspeak-client-bin-3.0.0_beta32-r1 (23 Oct 2010)
