@@ -1,4 +1,2 @@
-DIST TeamSpeak3-Client-linux_amd64-3.0.0-rc1.run 33158343 SHA256 1c413bedca528478ca0cf9eb99892f3ccf87c3282db28bcf4d33a7185283a148
-DIST TeamSpeak3-Client-linux_amd64-3.0.8.1.run 31777722 SHA256 1e82512a580b98186ceba0b5eb0a7e44e4e40b9a52ecf48f27ec9b9b352ed2a1 SHA512 f8a6d462c4256d71a0356e65aab36f3f7d18f635c6ec360190977d52bb84400cf8d53c82f343940217594f1fc795619910f9c9c2d180514cbb6170f0b4ed712c WHIRLPOOL b282dc5d338c1ec3b0e32ee0a163743c97b5a3e18d9116a8dd01cc5dfcb1a2e87e5af81f758cd43214887c4cfd95e5a8c3cf25dc529c455970df57d2085a3efe
-DIST TeamSpeak3-Client-linux_x86-3.0.0-rc1.run 33420069 SHA256 cc43f56de2c27d2951e19cff461881821eacb1f9f1f4f89811ea3ce42f8b5a12
-DIST TeamSpeak3-Client-linux_x86-3.0.8.1.run 32058260 SHA256 929f8ab55b1c8a3581a371f36cdcd5fa329e7d23a9f4eca7b551199b450a41ce SHA512 fc54d84937d61fdd6cf2de466bc080377b934485fc89c5636fb9571c91ef6a0571e4a9c5cdd8da027dde766ea4c2b61c2d4f30afda528c0c8a97a5276b1b10ef WHIRLPOOL 8e9ea491559eed65d55d7efab3b66978cfbb4928037e7becc685d77dfba84cea3f36c659361886db9af582f210b4aca673a574819e12ddd1a47570c04fd213af
+DIST TeamSpeak3-Client-linux_amd64-3.0.18.1.run 36640834 SHA256 dc955e0b355e61ef529454b61e08d0166e446e95284efaab8c153f15ada889ad SHA512 2328b939a6b96cd27cf35bfd1faa7fdfad61ab321d4703b967d9198bd032ead6a2d1985f4c262390e6f3d98323f973cdeb8805ccb8f0e7c3e0df44ce6af6f1a8 WHIRLPOOL 35c7b0f6039febd670aa25b4ff4ead24180e16018f62a1f1f4cbf80e8f69220a08e5ec389d933b0ccd088932f08fb6a2836d6a0a8eb4a489c6ea6d97ac833fce
+DIST TeamSpeak3-Client-linux_x86-3.0.18.1.run 37257402 SHA256 c86cf32bda31eafce6700da53bc935c35751e4d138055e635ff7682f7b8ecd94 SHA512 098062591669ffc4ae1af7cea0253712da150127f29883707cffe528011cfb08278e41426eaaa557141f1e591c410bf999d79d4c175f6081ce857990eb25e0f8 WHIRLPOOL 5423db8c63ce10f3dc97424c9a0600e9ad84d7b93f895c613b33c01e69becb412d3e777834a6a30f05043573d14e440ffd2499ce40eab2729b015fbfbd830908
